// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClusterDeprecations renders Issues and IssueSummary components when there are deprecations 1`] = `
<StatusGroup
  className={null}
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={
        Object {
          "critical": 2,
          "info": 1,
        }
      }
    />
  }
  title="Cluster Settings"
>
  <Issues
    className={null}
    issues={
      Array [
        Object {
          "level": "info",
        },
        Object {
          "level": "critical",
        },
        Object {
          "level": "critical",
        },
      ]
    }
  />
</StatusGroup>
`;

exports[`ClusterDeprecations renders a success message when there are no deprecations 1`] = `
<StatusGroup
  className={null}
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={Object {}}
    />
  }
  title="Cluster Settings"
>
  <p
    className="kuiText kuiSubduedText"
  >
    No cluster settings deprecations
  </p>
</StatusGroup>
`;

exports[`ClusterDeprecations renders the className property 1`] = `
<StatusGroup
  className="myClass"
  isInitiallyCollapsed={true}
  status={
    <IssueSummary
      className={null}
      issueLevelCounts={Object {}}
    />
  }
  title="Cluster Settings"
>
  <p
    className="kuiText kuiSubduedText"
  >
    No cluster settings deprecations
  </p>
</StatusGroup>
`;
